--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
@@ -18,6 +19,7 @@
     "fyers-api-v3": "^1.4.2",
     "mongoose": "^8.16.4",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "xlsx": "^0.18.5"
   }
