--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "fyers-api-v3": "^1.4.2",
     "mongoose": "^8.16.4",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
-    "xlsx": "^0.18.5"
+    "openai": "^5.19.1",
+    "xlsx": "^0.18.5",
+    "xml2js": "^0.6.2",
+    "yt-dlp-exec": "^1.0.2"
   }
 }
